# Learn_Everyday

./: LICENSE  README.md
programming/ipc/github/MessageCache/: CMakeLists.txt  LICENSE  MessageCache.h  MessageQueue.h  README.md  main.cpp
programming/ipc/shared-memory/shmqueue/: .shmq.o.cmd  .shmqueue.ko.cmd  .shmqueue.mod.o.cmd  .shmqueue.o.cmd  CMakeLists.txt  INSTALL  Makefile  modules.order  shmq.c  shmq.h  shmq_dev.h  shmqueue.ko  shmqueue.mod.c  test.c
programming/ipc/socket/tcp-semaphore-configure/: Makefile.am  Makefile.in  client.c  common.c  common.h  config.h.in  configure  configure.ac  server.c
programming/ipc/socket/tcp-semaphore-configure/autom4te.cache/: output.1  requests  traces.0  traces.1
programming/ipc/socket/udp-multicast-configure/: Makefile  Makefile.am  Makefile.in  common.c  common.h  config.h  config.h.in  config.status  configure  configure.ac  news.txt  reciver.c  sender.c
programming/ipc/socket/udp-multicast-configure/.deps/: common.Po  reciver.Po  sender.Po
programming/ipc/socket/udp-multicast-configure/autom4te.cache/: output.3  requests  traces.2  traces.3
programming/make/automake/chk_lib/: chk.sh  config.status  configure  configure.ac  omdeploychk_config.h  omdeploychk_config.h.in  pow
programming/make/automake/chk_lib/autom4te.cache/: output.1  requests  traces.0  traces.1
programming/make/automake/jt_sran-vos/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  vos.conf
programming/make/automake/jt_sran-vos/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
programming/make/automake/jt_sran-vos/product_om/: om_main.c
programming/make/automake/jt_sran-vos/product_om/cell_mgmt/: Makefile.in  copyright.sh
programming/make/automake/jt_sran-vos/product_om/cell_mgmt/include/: cell_mgmt_api.h  vcm.h  vcm_alarm.h  vcm_cell_entity.h  vcm_config.h  vcm_db.h  (+7 more)
programming/make/automake/jt_sran-vos/product_om/inet_mgmt/: Makefile
programming/make/automake/jt_sran-vos/vos/include/: vos_cli.h  vos_common.h  vos_ctype.h  vos_lib.h  vos_linklist.h  vos_module.h  vos_que.h  vos_sem.h  vos_string.h  vos_sys_diff.h  vos_sysmsg.h  vos_task.h  vos_timer.h  vos_types.h
programming/make/configure/jt_sran/: .cproject  .project  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  tree.txt
programming/make/configure/jt_sran/.deps/: bord_mgmt_api.Po  cell_mgmt_cell_ctrl.Po  cell_mgmt_cell_delete.Po  cell_mgmt_cell_entity.Po  cell_mgmt_cell_setup.Po  cell_mgmt_cell_stop.Po  cell_mgmt_init.Po  cell_mgmt_mac.Po  cell_mgmt_phy.Po  cell_mgmt_rrum.Po  cell_mgmt_sm.Po  cell_mgmt_timer.Po  cfig_init.Po  cfig_mgmt_entrance.Po  cpriConfigInfo.Po  cpuManageMsg.Po  fpgaAssetMsg.Po  fpgaHealthMsg.Po  fpgaPowerMsg.Po  inet_mgmt.Po  mnt_mgmt_cpu_monitor_handle_fn.Po  mnt_mgmt_fpga_msg_handle.Po  mnt_mgmt_get_api.Po  mnt_mgmt_init.Po  mnt_mgmt_set.Po  mnt_mgmt_timer_msg_handle.Po  msg_receive_fn.Po  omCtlNotification.Po  omRruNotification.Po  omVcmNotification.Po  om_common.Po  om_main.Po  om_main_ctrl.Po  phyCommConfigInfoScalar.Po  protocolCommConfigInfo.Po  protocolToPhyConfigInfo.Po  rbtree.Po  rruConfigInfo.Po  rruInitInfo.Po  rrus_mgmt_basic_func.Po  (+43 more)
programming/make/configure/jt_sran/autom4te.cache/: output.1  traces.2  traces.3
programming/make/configure/jt_sran/common_lib/include/: linuxlist.h  linuxrbtree.h  sbs_err.h  sbs_file.h  sbs_list.h  sbs_log.h  sbs_malloc.h  sbs_msgq.h  sbs_sema.h  sbs_socket.h  sbs_task.h  sbs_timer.h  sbs_type.h  sbs_xml.h  thread.h  timer_compat.h  util_biter.h  util_characters.h  util_dir.h  util_endianer.h  util_exec.h  util_printer.h  util_systemer.h  util_terminal.h  util_xml.h  utils_base.h
programming/make/configure/jt_sran/common_lib/src/: rbtree.c  sbs_file.c  sbs_list.c  sbs_log.c  sbs_malloc.c  sbs_msgq.c  sbs_sema.c  sbs_socket.c  sbs_task.c  sbs_timer.c  sbs_xml.c  thread.c  util_biter.c  util_characters.c  util_dir.c  util_endianer.c  util_exec.c  util_printer.c  util_systemer.c  util_terminal.c  util_xml.c  utils_base.c
programming/make/configure/jt_sran/product_om/: om_main.c
programming/make/configure/jt_sran/product_om/common/: om_common.c  om_common_h.h
programming/make/configure/jt_sran/product_om/inet_mgmt/: inet_mgmt.c  socket_register.c
programming/make/configure/t1/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  hello  hello.cpp  hello.h
programming/make/configure/t1/.deps/: hello.Po
programming/make/configure/t1/autom4te.cache/: output.1  requests  traces.0  traces.1
programming/make/configure/t2/: Makefile.am  Makefile.in  configure  configure.ac  hello.cpp  hello.h
programming/make/configure/t2/autom4te.cache/: output.0  traces.0  traces.1
programming/make/configure/t5/: Makefile.am  Makefile.in  configure  configure.ac  run.sh
programming/make/configure/t5/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
programming/make/configure/t5/common/: common.c  common.h
programming/make/configure/t5/src/: client.c  server.c
programming/make/configure/t6/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  main  main.c  run.sh
programming/make/configure/t6/.deps/: main.Po
programming/make/configure/t6/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.4
programming/make/configure/t6/common/: Makefile  Makefile.am  Makefile.in
programming/make/configure/t6/common/.deps/: util_biter.Po  util_characters.Po  util_dir.Po  util_endianer.Po  util_exec.Po  util_omp.Po  util_printer.Po  util_systemer.Po  util_terminal.Po  util_xml.Po
programming/make/configure/t6/common/include/: util_biter.h  util_characters.h  util_dir.h  util_endianer.h  util_exec.h  util_omp.h  util_printer.h  util_systemer.h  util_terminal.h  util_xml.h
programming/make/configure/t6/common/src/: util_biter.c  util_characters.c  util_dir.c  util_endianer.c  util_exec.c  util_omp.c  util_printer.c  util_systemer.c  util_terminal.c  util_xml.c
(+1167 files in other folders)
