AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=bin/jt_sran

bin_jt_sran_SOURCES=${top_srcdir}/common_lib/include/linuxlist.h \ 
                    ${top_srcdir}/common_lib/include/linuxrbtree.h \ 
                    ${top_srcdir}/common_lib/include/sbs_err.h \ 
                    ${top_srcdir}/common_lib/include/sbs_file.h \ 
                    ${top_srcdir}/common_lib/include/sbs_list.h \ 
                    ${top_srcdir}/common_lib/include/sbs_log.h \ 
                    ${top_srcdir}/common_lib/include/sbs_malloc.h \ 
                    ${top_srcdir}/common_lib/include/sbs_msgq.h \ 
                    ${top_srcdir}/common_lib/include/sbs_sema.h \ 
                    ${top_srcdir}/common_lib/include/sbs_socket.h \ 
                    ${top_srcdir}/common_lib/include/sbs_task.h \ 
                    ${top_srcdir}/common_lib/include/sbs_timer.h \ 
                    ${top_srcdir}/common_lib/include/sbs_type.h \ 
                    ${top_srcdir}/common_lib/include/sbs_xml.h \ 
                    ${top_srcdir}/common_lib/include/thread.h \ 
                    ${top_srcdir}/common_lib/include/timer_compat.h \ 
                    ${top_srcdir}/common_lib/include/util_biter.h \ 
                    ${top_srcdir}/common_lib/include/util_characters.h \ 
                    ${top_srcdir}/common_lib/include/util_dir.h \ 
                    ${top_srcdir}/common_lib/include/util_endianer.h \ 
                    ${top_srcdir}/common_lib/include/util_exec.h \ 
                    ${top_srcdir}/common_lib/include/util_printer.h \ 
                    ${top_srcdir}/common_lib/include/utils_base.h \ 
                    ${top_srcdir}/common_lib/include/util_systemer.h \ 
                    ${top_srcdir}/common_lib/include/util_terminal.h \ 
                    ${top_srcdir}/common_lib/include/util_xml.h \ 
                    ${top_srcdir}/common_lib/src/rbtree.c \ 
                    ${top_srcdir}/common_lib/src/sbs_file.c \ 
                    ${top_srcdir}/common_lib/src/sbs_list.c \ 
                    ${top_srcdir}/common_lib/src/sbs_log.c \ 
                    ${top_srcdir}/common_lib/src/sbs_malloc.c \ 
                    ${top_srcdir}/common_lib/src/sbs_msgq.c \ 
                    ${top_srcdir}/common_lib/src/sbs_sema.c \ 
                    ${top_srcdir}/common_lib/src/sbs_socket.c \ 
                    ${top_srcdir}/common_lib/src/sbs_task.c \ 
                    ${top_srcdir}/common_lib/src/sbs_timer.c \ 
                    ${top_srcdir}/common_lib/src/sbs_xml.c \ 
                    ${top_srcdir}/common_lib/src/thread.c \ 
                    ${top_srcdir}/common_lib/src/util_biter.c \ 
                    ${top_srcdir}/common_lib/src/util_characters.c \ 
                    ${top_srcdir}/common_lib/src/util_dir.c \ 
                    ${top_srcdir}/common_lib/src/util_endianer.c \ 
                    ${top_srcdir}/common_lib/src/util_exec.c \ 
                    ${top_srcdir}/common_lib/src/util_printer.c \ 
                    ${top_srcdir}/common_lib/src/utils_base.c \ 
                    ${top_srcdir}/common_lib/src/util_systemer.c \ 
                    ${top_srcdir}/common_lib/src/util_terminal.c \ 
                    ${top_srcdir}/common_lib/src/util_xml.c \ 
                    ${top_srcdir}/product_om/bord_mgmt/H/fpga_msg_receive_fn.h \ 
                    ${top_srcdir}/product_om/bord_mgmt/H/mnt_mgmt_api.h \ 
                    ${top_srcdir}/product_om/bord_mgmt/H/mnt_mgmt_init.h \ 
                    ${top_srcdir}/product_om/bord_mgmt/H/mnt_mgmt_msg_handle.h \ 
                    ${top_srcdir}/product_om/bord_mgmt/H/msg_receive_fn.h \ 
                    ${top_srcdir}/product_om/bord_mgmt/src/mnt_mgmt_cpu_monitor_handle_fn.c \ 
                    ${top_srcdir}/product_om/bord_mgmt/src/mnt_mgmt_fpga_msg_handle.c \ 
                    ${top_srcdir}/product_om/bord_mgmt/src/mnt_mgmt_get_api.c \ 
                    ${top_srcdir}/product_om/bord_mgmt/src/mnt_mgmt_init.c \ 
                    ${top_srcdir}/product_om/bord_mgmt/src/mnt_mgmt_set.c \ 
                    ${top_srcdir}/product_om/bord_mgmt/src/mnt_mgmt_timer_msg_handle.c \ 
                    ${top_srcdir}/product_om/bord_mgmt/src/msg_receive_fn.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/include/cell_mgmt_api.h \ 
                    ${top_srcdir}/product_om/cell_mgmt/include/cell_mgmt_cell_entity.h \ 
                    ${top_srcdir}/product_om/cell_mgmt/include/cell_mgmt_comm_func.h \ 
                    ${top_srcdir}/product_om/cell_mgmt/include/cell_mgmt_define.h \ 
                    ${top_srcdir}/product_om/cell_mgmt/include/cell_mgmt_msg.h \ 
                    ${top_srcdir}/product_om/cell_mgmt/include/cell_mgmt_sm.h \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_cell_ctrl.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_cell_delete.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_cell_entity.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_cell_setup.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_cell_stop.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_init.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_mac.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_phy.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_rrum.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_sm.c \ 
                    ${top_srcdir}/product_om/cell_mgmt/src/cell_mgmt_timer.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/cfig_common.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/cm_api.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/cpriConfigInfo.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/cpuManageMsg.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/fpgaAssetMsg.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/fpgaHealthMsg.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/fpgaPowerMsg.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/omCtlNotification.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/omRruNotification.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/omVcmNotification.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/phyCommConfigInfoScalar.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/protocolCommConfigInfo.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/protocolToPhyConfigInfo.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/rruConfigInfo.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/rruInitInfo.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/sbsconfig_common.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/timerCfgMsg.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/include/vcmCommConfigInfo.h \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/bord_mgmt_api.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/cfig_init.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/cfig_mgmt_entrance.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/cpriConfigInfo.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/cpuManageMsg.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/fpgaAssetMsg.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/fpgaHealthMsg.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/fpgaPowerMsg.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/omCtlNotification.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/omRruNotification.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/omVcmNotification.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/phyCommConfigInfoScalar.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/protocolCommConfigInfo.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/protocolToPhyConfigInfo.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/rruConfigInfo.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/rruInitInfo.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/sbsconfig_common.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/timerCfgMsg.c \ 
                    ${top_srcdir}/product_om/cfig_mgmt/src/vcmCommConfigInfo.c \ 
                    ${top_srcdir}/product_om/common/om_common.c \ 
                    ${top_srcdir}/product_om/common/om_common_h.h \ 
                    ${top_srcdir}/product_om/inet_mgmt/inet_mgmt.c \ 
                    ${top_srcdir}/product_om/inet_mgmt/inet_mgmt_h/inet_mgmt.h \ 
                    ${top_srcdir}/product_om/inet_mgmt/socket_register.c \ 
                    ${top_srcdir}/product_om/main_ctrl/include/om_main_ctrl.h \ 
                    ${top_srcdir}/product_om/main_ctrl/src/om_main_ctrl.c \ 
                    ${top_srcdir}/product_om/om_main.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_api_cell_mgmt.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_api_cfig_mgmt.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_api_data_fpga.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_api_inet_recv.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_api_inet_send.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_api_mac.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_api_main_ctrl.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_api_mont_mgmt.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_api_rru.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_api_timer.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_basic_func.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_common.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_cpri_entity.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_cpri.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_ir.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_rru_entity.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/include/rrus_mgmt_rru_entity_state_machine.h \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_basic_func.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_entrance.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_handler_cell_mgmt_msg.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_handler_cfig_mgmt_msg.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_handler_data_fpga_msg.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_handler_inet_mgmt_msg.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_handler_mac_msg.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_handler_main_ctrl_msg.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_handler_main_entrance.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_handler_mont_mgmt_msg.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_handler_rru_msg.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_handler_timer_msg.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_inet_sup_thread_entrance.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_init.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_rru_entity_state_machine_backup.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_rru_entity_state_machine.c \ 
                    ${top_srcdir}/product_om/rrus_mgmt/src/rrus_mgmt_unsocket_sup.c \ 
                    ${top_srcdir}/product_om/timer/include \ 
                    ${top_srcdir}/product_om/timer/src/timer_entrance.c \ 
                    ${top_srcdir}/product_om/timer/src/timer_init.c 

AM_CFLAGS= -I ${top_srcdir}/common_lib/include/ \
           -I ${top_srcdir}/product_om/bord_mgmt/H/ \
           -I ${top_srcdir}/product_om/cell_mgmt/include/  \
		   -I ${top_srcdir}/product_om/cfig_mgmt/include/  \
           -I ${top_srcdir}/product_om/main_ctrl/include/  \
           -I ${top_srcdir}/product_om/rrus_mgmt/include/  \
           -I ${top_srcdir}/product_om/inet_mgmt/inet_mgmt_h/  \
           -I ${top_srcdir}/product_om/common/ \
           -I ${top_srcdir}/product_om/timer/include \
           -I /usr/include/libxml2

CFLAGS=-pthread -lxml2 -lrt -lnetsnmp -lnetsnmpmibs -lnetsnmpagent -ldl -w -lm
                
                
                
